# lina

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/lina/: lina.hpp
include/lina/algorithm/: algorithm.hpp  dot_product.hpp  element_at.hpp  fill.hpp  for_each.hpp  for_each_index.hpp  for_each_zipped.hpp  hadamard_division.hpp  hadamard_product.hpp  make_diagonal.hpp  make_identity.hpp  make_one.hpp  make_zero.hpp  matrix_ostream.hpp  matrix_product.hpp  negate.hpp  scalar_division.hpp  scalar_product.hpp  subtract.hpp  sum.hpp  trace.hpp
include/lina/algorithm/detail/: dot_product_compatible.hpp  lazy_matrix_product_evaluator.hpp  matrix_product_compatible.hpp  matrix_product_result_type.hpp  utility.hpp
include/lina/concepts/: concept_types.hpp  concepts.hpp  extent.hpp  is_matrix.hpp  is_square_matrix.hpp  matrix.hpp  matrix_adapter.hpp  matrix_dimension.hpp  same_dimension.hpp  square_matrix.hpp  types.hpp  vector.hpp
include/lina/concepts/detail/: native_matrix.hpp  shorthand.hpp
include/lina/storage/: basic_matrix.hpp  matrix.hpp
include/lina/storage/detail/: coordinate_index_conversion.hpp  index_iterator.hpp  launder_const_iterator.hpp
include/lina/types/: basic_matrix.hpp  column_major_iterator.hpp  native_order_iterator.hpp  row_major_iterator.hpp  types.hpp
include/lina/types/detail/: coordinate_index_conversion.hpp  index_iterator.hpp  launder_const_iterator.hpp
test/: CMakeLists.txt  test_main.cpp
test/algorithm/: test_dot_product.cpp  test_element_at.cpp  test_fill.cpp  test_for_each.cpp  test_for_each_index.cpp  test_hadamard_division.cpp  test_hadamard_product.cpp  test_make_diagonal.cpp  test_make_identity.cpp  test_make_one.cpp  test_make_zero.cpp  test_matrix_product.cpp  test_negate.cpp  test_scalar_division.cpp  test_scalar_product.cpp  test_subtract.cpp  test_sum.cpp  test_trace.cpp
test/concepts/: test_concepts.cpp
test/storage/: test_basic_matrix.cpp  test_matrix.cpp
test/types/: test_basic_matrix.cpp  test_column_major_iterator.cpp  test_native_order_iterator.cpp  test_row_major_iterator.cpp
